# abs_kobo_sync

./: .env  .gitignore  Cargo.toml  README.md  justfile
.github/: copilot-instructions.md
.github/workflows/: entities.yaml
docs/: IMPLEMENTATION_PLAN.md
entities/: Cargo.toml
entities/src/: book_sync.rs  devices.rs  lib.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20250819_215543_create_user_table.rs  m20250820_115221_create_devices_table.rs  m20250820_115913_create_book_sync_table.rs
src/: config.rs  main.rs
src/abs_client/: mod.rs
src/domain/: mapping.rs  models.rs
src/kobo_api/: mod.rs  models.rs  routes.rs
src/kobo_api/models/: kobo.rs  mod.rs
src/kobo_api/services/: health.rs  library.rs  metadata.rs  mod.rs  reading.rs  sync.rs
src/storage/: mod.rs
